packages/core/src/components/bce-slider/bce-slider.scss
@import '../../../scss/input-creator.scss';

:host {
  @include bce-color-default(primary);
  position: relative;
  display: inline-block;

  input[type='range'] {
    -webkit-appearance: none;
    appearance: none;
    height: 4px;
    border-radius: 2px;
    cursor: pointer;

    background: linear-gradient(
      to right,
      bce-color() var(--fill-width, 0),
      bce-color(ghost) 0
    );

    &::-webkit-slider-thumb {
      @include elevate(1, false);
      -webkit-appearance: none;
      appearance: none;
      width: 14px;
      height: 14px;
      background-color: bce-color(light);
      border-radius: 50%;
    }

    &::-moz-range-thumb {
      @include elevate(1, false);
      width: 14px;
      height: 14px;
      background-color: bce-color(light);
      border-radius: 50%;
      border: none;
    }

    &[data-value] {
      &::-webkit-slider-thumb {
        background-color: bce-color();
      }

      &::-moz-range-thumb {
        background-color: bce-color();
      }
    }
  }
}

:host([block]),
:host([label]) {
  display: flex;
  flex-flow: column nowrap;
  margin: 20px 0;
  min-height: 40px;

  input {
    margin: 16px 0;
  }
}

:host([label]) {
  @include media-medium {
    flex-flow: row nowrap;
    align-items: center;

    bce-label {
      flex: 1 0 25%;
    }

    input {
      margin: 0;
      flex: 0 0 75%;
    }
  }
}

:host([disabled]) input[type='range'] {
  background: linear-gradient(
    to right,
    bce-color(300) var(--fill-width, 0),
    bce-color(ghost) 0
  );
  cursor: default;

  &[data-value] {
    &::-webkit-slider-thumb {
      background-color: bce-color(300);
    }

    &::-moz-range-thumb {
      background-color: bce-color(300);
    }
  }
}

